--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     <div class="header">
         <nav>
             <img src="images/logo.png" class="logo">
-            <div>
+            <div class="languade-option">
                 <select name="role" id="language">
                     <label for="">
                     <option value="opcao1">Português</option>
                     <option value="opcao2">English</option>
                 </label>
                 </select>
-                <a href="menu\signin.html"><button>Entrar</button></a>
+                <a href="#"><button class="button-header">Entrar</button></a>
             </div>
         </nav>
         <div class="header-content">
@@ -228,7 +228,7 @@
                         <div id="input-gp">
                             <input type="email" id="email">
                             <button title="Clique aqui e envie um e-mail">
-                                <a href=mailto:davidbensaxofonista@gmail.com?subject="link HTML">
+                                <a href="#">
                                     <i id="email-icon" class="fa-regular fa-envelope"></i>
                                 </a>
                             </button>
