finalizando as atualizações finais

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <p id="animation">
                 Wuer assistir? Inorme 
             </p>
-            <form class="email-signup" method="get">
+            <form class="email-signup">
                 <input type="email" placeholder="Email" required>
                 <button type="submit">Vamos Lá</button>
             </form>
@@ -192,7 +192,7 @@
             </li>
         </ul>
 
-    </center>
+    </center> 
 
         <!----- RODAPÉ ----->
 
@@ -204,17 +204,17 @@
                         utilizando apenas HTML, CSS e Javascript. Me sigam nas redes sociais para ver mais projetos.</p>
                         <div class="links-footer">
                            <div class="social-link-social">
-                               <a href="https://github.com/DavidBen48">
+                               <a href="">
                                    <i class="fa-brands fa-github link-footer"></i>
                                </a>
                            </div>
                            <div class="social-link">
-                               <a href="https://www.instagram.com/davidben_48/">
+                               <a href="">
                                    <i class="fa-brands fa-instagram link-footer"></i>
                                </a>
                            </div>
                            <div class="social-link">
-                               <a href="https://www.linkedin.com/in/david-ben-de-oliveira-vieira-63a1991b9/">
+                               <a href="">
                                 <i class="fa-brands fa-linkedin link-footer"></i>
                                </a>
                            </div>
@@ -222,15 +222,13 @@
                     </div>
                     <div id="footer-subscrite">
                         <h3>Email</h3>
-                        <p>
-                            Se deseja entrar em contato por email, basta clicar no ícone abaixo.
-                        </p>
+                        <p> Se deseja entrar em contato por email,
+                             basta clicar no ícone abaixo. </p> 
+                             
                         <div id="input-gp">
                             <input type="email" id="email">
                             <button title="Clique aqui e envie um e-mail">
-                                <a href="#">
-                                    <i id="email-icon" class="fa-regular fa-envelope"></i>
-                                </a>
+                                <a>enviar</a>
                             </button>
                         </div>
                     </div>
